substitui imagens JPG por PNG no HTML e CSS

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="self-service-grid">
         <div class="self-service-image">
           <!-- Imagem do interior da lavanderia com máquinas modernas -->
-          <img src="assets/lavanderia-interior.jpg" alt="Interior da Lavou Lavanderia com máquinas modernas">
+          <img src="assets/lavanderia-interior.png" alt="Interior da Lavou Lavanderia com máquinas modernas">
         </div>
         <div class="self-service-content">
           <div class="section-label">LAVOU LAVANDERIA</div>
@@ -104,7 +104,7 @@
         </div>
         <div class="concept-image">
           <!-- Imagem das máquinas de lavar e secar -->
-          <img src="assets/maquinas-lavanderia.jpg" alt="Máquinas de lavar e secar da Lavou Lavanderia">
+          <img src="assets/maquinas-lavanderia.png" alt="Máquinas de lavar e secar da Lavou Lavanderia">
         </div>
       </div>
     </div>
